# panoramix

./: .flake8  .gitignore  Contract  GUH  LICENSE  MANIFEST.in  OPCODES.md  README.md  TODO.md  blank.yml)blank.yml  bulk_compare.py  bulk_decompile.py  panoramix.py  pyproject.toml  requirements.txt  secret.py  setup.py  various.py
TavoRg1/: panoramix
benchmark/: 0x06012c8cf97BEaD5deAe237070F9587f8E7A266d.pan  0x06a6a7aF298129E3a2AB396c9C06F91D3C54aBA8.pan  0x165cFb9cCf8b185E03205Ab4118eA6afBdbA9203.pan  0x53F955c424F1378D67Bb5e05F728476dC75fB4bA.pan  0x6025F65f6b2f93d8eD1efeDc752acfd4bdbCec3E.pan  0x68Cb858247ef5c4A0D0Cde9d6F68Dce93e49c02A.pan  0x7b220AC85B7ae8Af1CECCC44e183A862dA2eD517.pan  0x89205A3A3b2A69De6Dbf7f01ED13B2108B2c43e7.pan  0x8d12A197cB00D4747a1fe03395095ce2A5CC6819.pan  0xF835A0247b0063C04EF22006eBe57c5F11977Cc4.pan  0xe2F42B417337fd9fD22631cad54DB8178655Fcd1.pan  0xf91546835f756DA0c10cFa0CDA95b15577b84aA7.pan
core/: __init__.py  algebra.py  arithmetic.py  masks.py  memloc.py  variants.py
pano/: __main__.py  contract.py  decompiler.py  folder.py  function.py  loader.py  matcher.py  postprocess.py  prettify.py  rewriter.py  simplify.py  sparser.py  stack.py  vm.py  whiles.py
panoramix/: __main__.py  contract.py  decompiler.py  folder.py  function.py  loader.py  matcher.py  postprocess.py  prettify.py  rewriter.py  simplify.py  sparser.py  stack.py  vm.py  whiles.py
tilde/: Main  README.md  run_test.py  test.py  tilde.py
utils/: __init__.py  helpers.py  opcode_dict.py  prettify.py  profiler.py  signatures.py  supplement.py
(+12 files in other folders)
